add Movies session
